# oss-security-policy-check

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/oss_security_policy_check/: __init__.py  checker.py  cli.py
tests/: test_checker.py  test_cli.py
